k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zero-downtime-app
  namespace: zero-downtime
  labels:
    app: zero-downtime-app
spec:
  replicas: 3

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1

  selector:
    matchLabels:
      app: zero-downtime-app

  template:
    metadata:
      labels:
        app: zero-downtime-app
    spec:
      terminationGracePeriodSeconds: 30

      containers:
        - name: app
          image: 520701146276.dkr.ecr.ap-south-1.amazonaws.com/zero-downtime-app:1.0.3

          ports:
            - containerPort: 8080
              protocol: TCP

          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi

          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 10
