k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zero-downtime-app
  namespace: zero-downtime
  labels:
    app: zero-downtime-app
spec:
  type: ClusterIP
  selector:
    app: zero-downtime-app
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
